--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,24 +1,40 @@
-exclude: '^(docs/conf.py|.bumpversion.cfg)$'
+exclude: '^(docs/conf.py|.bumpversion.cfg|.*tests/.*)$'
 
 repos:
-- repo: git://github.com/pre-commit/pre-commit-hooks
-  rev: v2.1.0
+- repo: https://github.com/pre-commit/pre-commit-hooks
+  rev: v4.5.0
   hooks:
   - id: trailing-whitespace
-  - id: check-added-large-files
   - id: check-ast
   - id: check-json
   - id: check-merge-conflict
   - id: check-xml
   - id: check-yaml
+  - id: check-toml
+  - id: check-symlinks
+  - id: check-shebang-scripts-are-executable
+  - id: detect-aws-credentials
+    args: ["--allow-missing-credentials"]
   - id: debug-statements
   - id: end-of-file-fixer
   - id: requirements-txt-fixer
   - id: mixed-line-ending
-    args: ['--fix=no']
+    args: ['--fix=auto']
 
-- repo: https://github.com/ambv/black
-  rev: 19.3b0
+- repo: https://github.com/astral-sh/ruff-pre-commit
+  rev: v0.9.2
   hooks:
-  - id: black
-    language_version: python3.7
+    - id: ruff
+      types_or: [ python, pyi ]
+      args: [ --fix, --config=pyproject.toml ]
+    - id: ruff-format
+      types_or: [ python, pyi ]
+      args: [--config=pyproject.toml]
+
+# incompatible with ruff - keeping it here in case someone finds a way to fix it
+- repo: https://github.com/pycqa/isort
+  rev: 5.12.0
+  hooks:
+    - id: isort
+      name: isort (python)
+      args: ["--profile", "black"]
